--- a/style.css
+++ b/style.css
@@ -6,20 +6,21 @@
 
 body {
     font-family: "Lucida Sans Unicode", "Lucida Grande", sans-serif ;
-    background-color: #2b81ac;
+    border: 20px solid #2b81ac;
     color: #ffffff;
+    background-color: #fff;
+    font-size: 18px;
 }
 
 main {
-    background-color: #3399cc;
-    margin: 35px;
-    padding: 20px;
-    padding-bottom: 200px; 
+    padding-top: 20px;
+    padding-bottom: 185px; 
+    background-color:  #3399cc ;
 }
 
 h2 {
-margin-left: 20%; 
-}
+margin-left: 10%; 
+}   
 
 li p {
     opacity: 60%;
@@ -30,24 +31,23 @@ ul {
     font-size: 0px;
     text-align: center;
     margin: 20px auto;
-    width: 60%;
-    border: 2px solid white;
+    width: 80%;
+    border: 2px solid #fff;
+    background-color: #fff;
 }
 
 li {
     display: inline-block;
-    font-size: 24px;
+    font-size: 20px;
     width: 100%;
-    height: 140px;
+    height: 155px;
     border: 2px solid #fff;
-    padding-top: 30px;
-    border-collapse: collapse;
-    
+    padding-top: 40px; 
 }
 
 
 ul:hover li {
-    opacity: 0.2;
+    opacity: 0.5;
     transition: all .1s ease-in;
 }
 
@@ -57,7 +57,7 @@ ul li:hover {
 }
 
 footer {
-    margin-left: 20%;
+    margin-left: 10%;
 }
 
 .wi {
